# file-compressor

./: .gitignore  CMakeLists.txt  Compresor de archivos.pro  Makefile_interactive  README.md  README_C++.md  README_COMPRESSOR.md  README_GUI.md  README_INTERACTIVE.md  build.bat  build.sh  build_cmake.sh  build_cpp.sh  build_gui.sh  build_gui_manual.sh  build_gui_simple.sh  build_simple.sh  compress.sh  compressor  compressor.py  ejemplo_uso.py  gui.py  gui_compressor  gui_compressor.pro  install.py  install_ghostscript.sh  interactive_compressor  main.py  optimize_compression.py  requirements.txt  run.bat  run.sh  run_cpp.sh  run_gui.sh  run_interactive.sh  simple_compressor  test.txt  test_buttons.sh  test_dialog.cpp  test_dialog.sh  (+3 more)
build_cmake/gui_compressor_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_cmake/gui_compressor_autogen/6YEA5652QU/: moc_gui_mainwindow.cpp.d
build_gui/: gui_compressor.pro  moc_predefs.h
build_gui_simple/: SimpleGUICompressor.pro
build_qmake/: FileCompressor.pro  moc_predefs.h
build_simple/: SimpleCompressor.pro
include/: compressor.h  gui_compressor.h  gui_mainwindow.h  mainwindow.h  progressdialog.h
src/: compressor.cpp  compressor_simple.cpp  gui_compressor.cpp  gui_main.cpp  gui_mainwindow.cpp  gui_mainwindow_simple.cpp  interactive_compressor.cpp  main.cpp  mainwindow.cpp  progressdialog.cpp  pure_cpp_compressor.cpp  simple_compressor.cpp  simple_main.cpp
